res/grammar.txt
Grammar for parsers.


Grammar notation
====================================================================================================================
All [leaves] are TerminalNodes.
Nonterminals marked with ~ are not included in the parse tree.
Nodes marks @ are not yet defined in the grammar.
Nodes marks % are not yet implemented in the parser.


Pattern 		Explanation
====================================================================================================================
(?=pattern) 	is a positive look-ahead assertion
(?!pattern) 	is a negative look-ahead assertion
(?<=pattern) 	is a positive look-behind assertion
(?<!pattern) 	is a negative look-behind assertion
pattern? 		matches zero or one
pattern*		matches zero or more
pattern+		matches one or more


Rules 																					Node Type in Parse Tree
====================================================================================================================
Sentence 					= Clause EndingPunctuation
							= Clause SubordinateClause EndingPunctuation
							= SubordinateClause ~Comma Clause EndingPunctuation			=>	<SentenceNode>
Clause 						= NounPhrase VerbPhrase										=>  <ClauseNode>
SubordinateClause 			= SubordinateConjunction NounPhrase VerbPhrase 				
							% ReleativePronoun NounPhrase Verb
							% AdverbPhrase NounPhrase Verb 								=>  <SubordinateClause>
VerbPhrase 					= IntransitiveVerb							
							= LinkingVerb AdjectivePhrase								=> 	<VerbPhraseNode>
NounPhrase 					= Determiner Noun Appositive?
							= Noun Appositive?											=> 	<NounPhraseNode>
Appositive 					% ~Comma NounPhrase ~Comma									
							% ~Comma NounPhrase (?=EndingPunctuation) 					=>  <AppositiveNode>
AdjectivePhrase				= Adjective													=> 	<AdjectivePhraseNode>
AdverbPhrase 				% Adverb													=> 	<AdverbPhrase>
Determiner 					= Article
							= @Demonstrative
							= @Possessives
							= @Quantifiers
							= @Numerals
							= @Distributives
							= @Interrogatives											=> 	<DeterminerNode>
Article 					= [article]													=> 	<ArticleNode>
Noun						= [noun] 													=> 	<NounNode>
MainVerb 					= [verb] 													=> 	<VerbNode>
IntransitiveVerb			= [verb] 													=> 	<VerbNode>
Adjective 					= [adjective] 												=> 	<AdjectiveNode>
Adverb 						= [adverb] 													=> 	<AdverbNode>
SubordinateConjunction 		= [conjunction] 											=>  <SubordinateConjunctionNode>
EndingPunctuation 			= [punctuation]												=> 	<EndingPunctuationNode>


Tree Format:
0) RootNode
    0) ConceptsNode
    1) SentencesNode
